--- a/index.html
+++ b/index.html
@@ -5,12 +5,41 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
     <title>My Portfolio</title>
+    <link rel="stylesheet" href="./css/styles.css">
+    
 </head>
 
 <body>
     <H1>
         My Portfolio
     </H1>
+    <div class="header">
+      <h1>Drake Hoffman</h1>
+      <h2>Software Developer</h2>
+      <hr> 
+ </div>
+ <p>My <i>favorite</i> thing about programming is constantly learning</p>
+ <img alt="Me!" src="./images/coding-portfolio.jpeg">
+ <h3>About Me!</h3>
+<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+<h3>My Projects!</h3>
+<ul>
+    <li>Project 1</li>
+    <li>Project 2</li>
+    <li>Project 3</li>
+</ul>
+<h3>Contact Me!</h3>
+<p>(789)531-6729</p>
+<a href="mailto:fake@email.com">
+  Lets Go!
+</a>
+
+
+ 
+
+
+
+
     <!-- 
       Directions:
         1. Create a DIV element to contain the page content
